# euleretal

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  TODO.md  build_web.sh
.cargo/: config.toml
content/: Cargo.toml
content/src/: lib.rs
content/src/integrators/: euler.rs  exact_for_const.rs  mid_point.rs  mod.rs  test_util.rs
content/src/scenarios/: center_mass.rs  constant_acceleration.rs  mod.rs
core/: Cargo.toml
core/src/: acceleration_field.rs  duration.rs  fraction.rs  integration.rs  integrator.rs  lib.rs  position.rs  scenario.rs  vector_quantity.rs
core/src/integration_step/: mod.rs  start_condition.rs  step.rs
core/src/integration_step/builders/: mod.rs  position.rs  step.rs  tests.rs
core/src/integration_step/computed/: acceleration.rs  position.rs  velocity.rs
core/src/integration_step/contributions/: dt_fraction.rs  mod.rs  trait.rs
core/src/integration_step/contributions/position/: abstraction.rs  collection.rs  mod.rs  variant.rs
core/src/integration_step/contributions/velocity/: abstraction.rs  collection.rs  mod.rs  variant.rs
core/src/integrators/: euler.rs  exact_for_const.rs  mid_point.rs  mod.rs  test_util.rs
core/src/scenarios/: center_mass.rs  constant_acceleration.rs  mod.rs
docs/: euleretal.js  euleretal_bg.wasm  index.html
euleretal/: Cargo.toml
euleretal-core/: Cargo.toml
euleretal-core/src/: acceleration_field.rs  integrator.rs  lib.rs  move.rs  samples.rs  scenario.rs  vector_quantity.rs
euleretal-core/src/integration_step/: mod.rs  step.rs
euleretal-core/src/integration_step/builders/: acceleration.rs
euleretal-core/src/integration_step/computed/: mod.rs
euleretal-core/src/integration_step/contributions/: mod.rs  trait.rs
euleretal-core/src/integration_step/contributions/velocity/: abstraction.rs  variant.rs
euleretal-core/src/integrators/: mid_point.rs  mod.rs
euleretal/src/: app.rs  world.rs
euleretal/src/containers/: constants.rs
euleretal/src/containers/canvas/: mod.rs  view.rs
euleretal/src/containers/controls/: integrators.rs  scenarios.rs  step_sizes.rs
euleretal/src/entities/: integration.rs  integrator.rs  step_size.rs
euleretal/src/entities/canvas/: mod.rs  painter.rs
euleretal/src/misc/: entity_store.rs  settings.rs  user_label.rs
src/: TODO.md  acceleration.rs  app.rs  bounding_box.rs  canvas.rs  change_tracker.rs  component_types.rs  coordinates.rs  core.rs  duration.rs  functional_state.rs  integration.rs  lib.rs  main.rs  main_bevy.rs  misc.rs  sample.rs  scenario.rs  step_size.rs  ui.rs  user_label.rs  view.rs  world.rs
src/app/: mod.rs
src/app/components/: duration.rs  start_position.rs  start_velocity.rs
src/app/core/: acceleration.rs  integrator.rs  sample.rs
src/app/entities/: canvas.rs  integration.rs  integrator.rs  scenario.rs  step_size.rs
src/app/integrators/: euler.rs
src/app/misc/: bounding_box.rs
src/app/scenarios/: center_mass.rs  constant_acceleration.rs
src/component_types/: duration.rs  mod.rs  start_position.rs  start_velocity.rs  step_size.rs
src/components/: duration.rs  mod.rs  start_position.rs  user_label.rs
src/core/: acceleration.rs  acceleration_field.rs  derived_quantities.rs  dt_fraction.rs  duration.rs  fraction.rs  integration.rs  integration_step.rs  integrator.rs  mod.rs  move.rs  position.rs  sample.rs  samples.rs  scenario.rs  start_position.rs  start_velocity.rs  vector_quantity.rs  velocity.rs
src/core/integration_step/: computed_acceleration.rs  computed_position.rs  computed_velocity.rs  contributions.rs  mod.rs  start_condition.rs  step.rs
src/core/integration_step/builders/: acceleration.rs  dt_fraction.rs  mod.rs  position.rs  step.rs  tests.rs  velocity.rs
src/core/integration_step/computed/: acceleration.rs  mod.rs  position.rs  (+1 more)
src/entities/: canvas.rs  integration.rs  integrator.rs  mod.rs  scenario.rs  step_size.rs
src/integrator/: mod.rs
src/integrators/: euler.rs  exact_for_const.rs  mid_point.rs  mod.rs  test_playground.rs
src/layer/: acceleration_field.rs  coordinates.rs  inspector.rs  integrations.rs
src/layers/: acceleration_field.rs  coordinates.rs  exact_path.rs  inspector.rs  integration.rs  integrations.rs  mod.rs  selector.rs
src/misc/: bounding_box.rs  change_tracker.rs  fraction.rs  mod.rs  my_stroke_ui.rs  obj.rs
src/plugins/: acceleration_field.rs  coordinates.rs  inspector.rs  integrations.rs  mod.rs  ui.rs
src/plugins/ui/: canvas_grid.rs  canvas_view.rs  color_controls.rs  integrator_controls.rs  layer_controls.rs  mod.rs  scenario_controls.rs  settings.rs  step_size_controls.rs
src/scenario/: center_mass.rs  mod.rs
src/scenarios/: center_mass.rs  constant_acceleration.rs  mod.rs
src/ui/: app.rs  canvas.rs  canvas_grid.rs  canvas_view.rs  color_controls.rs  entities.rs  integrator_controls.rs  layer_controls.rs  misc.rs  mod.rs  scenario_controls.rs  settings.rs  step_size_controls.rs  world.rs
src/ui/containers/: mod.rs
src/ui/entities/: canvas.rs  integration.rs  integrator.rs  mod.rs  step_size.rs
src/ui/layers/: acceleration_field.rs  coordinates.rs  inspector.rs  integrations.rs  mod.rs
src/ui/misc/: bounding_box.rs  mod.rs  my_stroke_ui.rs  settings.rs
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  main.rs  world.rs
ui/src/containers/: mod.rs
ui/src/containers/canvas/: grid.rs  view.rs
ui/src/containers/canvas/layers/: acceleration_field.rs  coordinates.rs  inspector.rs  integrations.rs  mod.rs
ui/src/containers/controls/: scenarios.rs  step_sizes.rs
ui/src/containers/settings/: colors.rs
ui/src/entities/: integration.rs  integrator.rs  mod.rs  step_size.rs
ui/src/entities/canvas/: canvas_impl.rs  mod.rs  painter.rs  trajectory_buffer.rs
ui/src/misc/: bounding_box.rs  entity_store.rs  mod.rs  settings.rs  stroke_ext.rs  user_label.rs
ui/src/ui/: mod.rs
ui/src/ui/containers/: mod.rs
ui/src/ui/containers/canvas/: grid.rs
ui/src/ui/containers/canvas/layers/: inspector.rs
ui/src/ui/containers/controls/: mod.rs
ui/src/ui/entities/: mod.rs
ui/src/ui/misc/: mod.rs  my_stroke_ui.rs  settings.rs  user_label.rs
(+39 files in other folders)
