[package]
name = "euleretal"
description = "Interactive visualization of discrete integration functions for physical acceleration of rigid bodies"
readme = "README.md"
repository = "https://github.com/quadruple-output/euleretal"
categories = ["game-development", "mathematics", "science", "simulation", "visualization"]
keywords = ["Euler", "Runge-Kutta"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["quadruple-output <57874618+quadruple-output@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.10.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
bevy_ecs = "0.4"
bevy_math = "0.4"
decorum = "0.3"
flexi_logger = "0.17"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
