# This file was originally based on the egui template.  The latest template version can be
# found at https://github.com/emilk/egui_template/blob/master/Cargo.toml

[package]
name = "euleretal"
description = "Interactive visualization of discrete integration functions for physical acceleration of rigid bodies"
readme = "README.md"
repository = "https://github.com/quadruple-output/euleretal"
categories = ["game-development", "mathematics", "science", "simulation", "visualization"]
keywords = ["Euler", "Runge-Kutta"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["quadruple-output <57874618+quadruple-output@users.noreply.github.com>"]
edition = "2018"
# more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14" # gives us egui, epi and web+native backends
parry3d = "0.7" # geometric and collision detection libraries, including `nalgebra`
ordered-float = { version = "2", features = [] } # Total ordering (and more) for floating-point types
#ordered-float = { version = "2", features = ["serde"] } # Total ordering (and more) for floating-point types
#fraction = { version = "0.9", default-features = false }
num-traits = "0.2"
log = "0.4"
simple_logger = "1"

[dependencies.serde] # serialization/deserialization framework
version = "1"
features = ["derive"]
optional = true 

[lib]
# refer to https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
crate-type = ["cdylib", "rlib"] # this setting has blindly been taken over from the egui template

[features]
default = []
http = ["eframe/http"] # enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
