[workspace]
members = [ "euleretal-core", "euleretal" ]

[profile.release]
opt-level = 2 # fast and small wasm

# [patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
