# This file was originally based on the egui template.  The latest template version can be
# found at https://github.com/emilk/egui_template/blob/master/Cargo.toml

[package]
name = "euleretal-core"
description = "Core library for visualizations of discrete integration functions for physical acceleration of rigid bodies"
readme = "../README.md"
repository = "https://github.com/quadruple-output/euleretal"
categories = ["game-development", "mathematics", "science", "simulation", "visualization"]
keywords = ["Euler", "Runge-Kutta"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["quadruple-output <57874618+quadruple-output@users.noreply.github.com>"]
edition = "2021"
# more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1"

[dependencies.serde] 
# serialization/deserialization framework
version = "1"
features = ["derive"]

[dependencies.parry3d]
# geometric and collision detection libraries, including `nalgebra`
version = "0.7" 
features = ["serde-serialize"]

[dependencies.ordered-float]
# Total ordering (and more) for floating-point types
version = "2"
features = ["serde"]

[lib]
# refer to https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
crate-type = ["cdylib", "rlib"] # this setting has blindly been taken over from the egui template
